# dormouse

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dormouse/: __init__.py  analyzer.py  anthropic_proxy.py  assets.py  classifier.py  cli.py  compressor.py  db.py  embedder.py  language_guard.py  lexicon_db.py  local_model.py  mapper.py  middleware.py  morphology.py  optimizer.py  parsers.py  rule_engine.py  search.py  seq2seq.py  stream_buffer.py  style_classifier.py  teapot.py  unsqueeze.py
src/dormouse/data/: replacements.json
tests/: test_analyzer.py  test_anthropic_proxy.py  test_brew.py  test_classifier.py  test_cli.py  test_cli_search.py  test_compressor.py  test_db.py  test_embedder.py  test_import.py  test_language_guard.py  test_local_llm.py  test_local_model.py  test_mapper.py  test_middleware.py  test_middleware_e2e.py  test_openrouter.py  test_optimizer.py  test_parsers.py  test_rule_engine.py  test_search.py  test_seq2seq.py  test_stream_buffer.py  test_style_classifier.py  test_teapot.py  test_unsqueeze.py
