[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dormouse-ua"
version = "0.4.2"
description = "Оптимізація українських текстів для LLM: менше токенів, краще розуміння"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Daria Chuprina", email = "dchuprina@lazysoft.pl"},
]
keywords = ["ukrainian", "nlp", "llm", "tokenization", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "click>=8.1",
    "pymorphy3>=2.0",
    "pymorphy3-dicts-uk>=2.4",
    "tiktoken>=0.7",
    "openai>=1.0",
    "anthropic>=0.40",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "sentence-transformers>=3.0",
]
search = [
    "dormouse-ua[ml]",
    "pymupdf>=1.24",
]
all = [
    "dormouse-ua[ml,search]",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pymorphy3>=2.0",
    "pymorphy3-dicts-uk>=2.4",
]

[project.scripts]
dormouse = "dormouse.cli:main"

[project.urls]
Homepage = "https://github.com/ChuprinaDaria/dormouse"
Documentation = "https://github.com/ChuprinaDaria/dormouse#readme"
Repository = "https://github.com/ChuprinaDaria/dormouse"
Issues = "https://github.com/ChuprinaDaria/dormouse/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dormouse = ["data/*.json", "data/*.pt", "data/*.db"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests with real API (require API keys)",
]
